--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,6 @@
   <h1>vijay</h1>
 </center>
 <br>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, eos ratione rerum vel illo omnis architecto! Quisquam adipisci corporis quam animi, ad dolorem recusandae temporibus, laboriosam repellat repellendus consectetur ut.
+</p>
